2006-02-14  Olivier Jolly  <olivier.jolly@pcedev.com>

	* gnu/testlet/java/io/ObjectInputOutput/HierarchyTest.java
	(HierarchyTest.Base): Added explicit constructor to avoid interpretation
	of its visibility.

2006-02-14  Olivier Jolly  <olivier.jolly@pcedev.com>

	* batch_run
	  (COMPILER): Added "none" as possible value to skip compilation.

2006-02-14  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/awt/Frame/menubar.java: New test.

2006-02-14  Lillian Angel <langel@redhat.com>

	* gnu/testlet/java/awt/BorderLayout/layoutContainer.java
	(test0): New test.

2006-02-14  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/JComponent/getListeners.java
	(MyPropertyChangeListener): New class,
	(test): Added check for PropertyChangeListener.

2006-02-13  Pedro Izecksohn  <izecksohn@yahoo.com>

	* gnu/testlet/java/util/ResourceBundle/getBundle.java (test): Avoid
	ambiguity with JDK 1.6

2006-02-13  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/java/awt/Component/repaint.java: New test.

2006-02-13  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/plaf/metal/MetalBorders/ButtonBorder/getBorderInsets.java
	(test1): Added check for return value,
	(test2): Set component in test for null Insets argument,
	* gnu/testlet/javax/swing/plaf/metal/MetalBorders/Flush3DBorder/getBorderInsets.java: 
	Likewise,
	* gnu/testlet/javax/swing/plaf/metal/MetalBorders/InternalFrameBorder/getBorderInsets.java:
	Likewise,
	* gnu/testlet/javax/swing/plaf/metal/MetalBorders/MenuItemBorder/getBorderInsets.java:
	Likewise,
	* gnu/testlet/javax/swing/plaf/metal/MetalBorders/PaletteBorder/getBorderInsets.java:
	Likewise.

2006-02-13  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* gnu/testlet/java/util/regex/Pattern/testdata3: Added some tests.

2006-02-12  Olivier Jolly  <olivier.jolly@pcedev.com>

	* gnu/testlet/java/io/ObjectInputOutput/ProxySerializationTest.java:
	Fixed test tag.

2006-02-12  Dalibor Topic  <robilad@kaffe.org>
