@@ -1,3 +1,10 @@
+2006-02-15  David Gilbert  <david.gilbert@object-refinery.com>
+
+	* gnu/testlet/javax/swing/SpinnerNumberModel/getNextValue.java
+	(test): Add checks for model without bounds,
+	* gnu/testlet/javax/swing/SpinnerNumberModel/getPreviousValue.java
+	(test): Likewise.
+
 2006-02-14  Olivier Jolly  <olivier.jolly@pcedev.com>
 
 	* gnu/testlet/java/io/ObjectInputOutput/HierarchyTest.java
